Fixed JS bugs, added some styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/dark.css">
+    <link rel="stylesheet" href="src/css/sketchpad.css">
     <title>Sketch Pad</title>
 </head>
 
@@ -21,9 +22,15 @@
             <img class="cs-sun" aria-hidden="true" src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/sun.svg"
                 decoding="async" alt="sun" width="15" height="15">
         </button>
+        <button id="clear-drawing-pad">
+            Clean Drawing Pad
+        </button>
     </div>
 
+    <div class="drawing-box"></div>
+
     <script src="src/js/dark.js"></script>
+    <script src="src/js/sketchpad.js"></script>
 </body>
 
 </html>
