Made pad creationg dynamic, need to fix how box is displayed

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <input type="number" id="pad_size" placeholder="Enter Size...">
             </div>
             <div class="modal-footer">
-                <button id="submitButton">Submit</button>
+                <button class="generate-pad">Generate</button>
             </div>
         </div>
     </div>
